removed sun Base64 depencency